# saturn-mousehunter-crawler-service

./: .gitignore  CRAWLER_INTEGRATION_TEST_REPORT.md  Dockerfile  README.md  XUEQIU_ENGINE_INTEGRATION.md  crawler_test_report.json  docker-compose.yml  portainer-stack.yml  pyproject.toml  test_crawler_functionality.py
.github/workflows/: auto-deploy.yml
deploy/: k8s-deploy-with-verification.sh  monitor-status.sh  multi-host-deploy.sh  portainer-auto-deploy.sh  quick-deploy.sh
docs/: DEPLOYMENT_GUIDE.md
docs/k8s-deployment/: K8S_DEPLOYMENT_GUIDE.md
k8s/: configmap.yaml  crawler-deployment.yaml  hpa.yaml  service.yaml
src/: main.py
src/application/consumer/: dragonfly_task_consumer.py
src/application/services/: crawler_engine.py  dragonfly_task_consumer.py  graceful_shutdown_manager.py  k8s_crawler_scheduler.py  proxy_integration_service.py  xueqiu_core_engine.py
src/infrastructure/settings/: config.py
src/interfaces/api/: crawler_management.py  health.py
